syntax="proto3";

option java_package = "com.xqmetting.protocol";


import "google/protobuf/any.proto";
import "request/PingRequest.proto";

/*顶层消息*/
//顶层消息是一种嵌套消息，嵌套了各种类型得消息
//内部的消息类型，全部使用optional字段
//根据消息类型 type的值，最多只有一个有效

message BaseMessage{
  int32 sequenceId = 1;
  MessageType messageType = 3;
  optional PingRequest pingRequest = 4;
}

enum MessageType{
    LoginRequestMessageType = 0;
    LoginResponseMessageType = 1;
    ChatRequestMessageType = 2;
    ChatResponseMessageType = 3;
    GroupChatRequestMessageType = 4;
    GroupChatResponseMessageType = 5;
    PingMessageType = 6;
    PongMessageType = 7;
    ServerPeerConnectedMessageType = 8;
    GroupRemoteChatRequestMessageType = 9;
    /**
     * 请求类型 byte值
     */
    RPC_MESSAGE_TYPE_REQUEST_Type = 101;
    /**
     * 响应类型byte值
     */
    RPC_MESSAGE_TYPE_RESPONSE_Type =102;

}