syntax="proto3";

option java_package = "com.xqmetting.protocol";


message ChatRequestMessage{
  string content = 1;
  string to = 2;
  string from = 3;
}