syntax="proto3";

option java_package = "com.xqmetting.protocol.message";

message GroupChatRequestMessage{
  string content = 1;
  string from = 2;
}