syntax="proto3";

option java_package = "com.xqmetting.protocol.message";

message GroupChatResponseMessage{
  string from = 1;
  string content = 2;
}