syntax="proto3";

option java_package = "com.xqmetting.protocol.message";

message PingMessage{
  
}